[workspace]
resolver = "2"
members = [
    "tracing",
    "tracing-core",
    "tracing-attributes",
    "tracing-error",
    "tracing-flame",
    "tracing-futures",
    "tracing-tower",
    "tracing-log",
    "tracing-macros",
    "tracing-mock",
    "tracing-subscriber",
    "tracing-serde",
    "tracing-test",
    "tracing-appender",
    "tracing-journald",
    "examples"
]

[workspace.dependencies]
criterion = "0.3.6"
futures = "0.3.21"
http = "0.2.8"
log = "0.4.17"
nu-ansi-term = "0.46.0"
once_cell = "1.19"
parking_lot = "0.12.1"
pin-project-lite = "0.2.9"
serde = "1.0.139"
serde_json = "1.0.82"
tempfile = "3.3.0"
thiserror = "1.0.31"
time = "0.3.2"
tokio = "1.20.0"
tokio-test = "0.4.2"