[package]
name = "tracing-examples"
version = "0.0.0"
publish = false
edition = "2018"
rust-version = "1.56.0"

[features]
default = []

[dev-dependencies]

# tracing crates
tracing = { path = "../tracing", version = "0.1.35" }
tracing-core = { path = "../tracing-core", version = "0.1.28" }
tracing-error = { path = "../tracing-error" }
tracing-flame = { path = "../tracing-flame" }
tracing-tower = { version = "0.1.0", path = "../tracing-tower" }
tracing-subscriber = { path = "../tracing-subscriber", version = "0.3.0", features = ["json", "env-filter"] }
tracing-futures = { version = "0.2.1", path = "../tracing-futures", features = ["futures-01"] }
tracing-attributes = { path = "../tracing-attributes", version = "0.1.22" }
tracing-log = { path = "../tracing-log", version = "0.1.3", features = ["env_logger"] }
tracing-serde = { path = "../tracing-serde" }
tracing-appender = { path = "../tracing-appender", version = "0.2.0" }
tracing-journald = { path = "../tracing-journald" }

# serde example
serde_json = "1.0.82"

futures = "0.3.21"
tokio = { version = "1.20.1", features = ["full"] }

# env-logger example
env_logger = "0.9.0"

# tower examples
tower = { version = "0.4.13", features = ["full"] }
http = "0.2.8"
hyper = { version = "0.14.20", features = ["full"] }
rand = "0.7.3"
bytes = "1"
argh = "0.1.8"

# sloggish example
nu-ansi-term = "0.46.0"
humantime = "2.1.0"
log = "0.4.17"

# inferno example
inferno = "0.11.6"
tempfile = "3"

# fmt examples
snafu = "0.6.10"
thiserror = "1.0.31"

# valuable examples 
valuable = { version = "0.1.0", features = ["derive"] }

[target.'cfg(tracing_unstable)'.dependencies]
tracing-core = { path = "../tracing-core", version = "0.1.28", features = ["valuable"]}
tracing-subscriber = { path = "../tracing-subscriber", version = "0.3.0", features = ["json", "env-filter", "valuable"]}
