[package]
name = "tracing-examples"
version = "0.0.0"
publish = false
edition = "2018"
rust-version = "1.63.0"

[features]
default = []

[dev-dependencies]

# tracing crates
tracing = { path = "../tracing", version = "0.2"}
tracing-core = { path = "../tracing-core", version = "0.2"}
tracing-error = { path = "../tracing-error" }
tracing-flame = { path = "../tracing-flame" }
tracing-tower = { version = "0.1.0", path = "../tracing-tower" }
tracing-subscriber = { path = "../tracing-subscriber", version = "0.3", features = ["json", "env-filter"] }
tracing-futures = { version = "0.3", path = "../tracing-futures", features = ["futures-01"] }
tracing-attributes =  { path = "../tracing-attributes", version = "0.2"}
tracing-log = { path = "../tracing-log", version = "0.2", features = ["env_logger"] }
tracing-serde = { path = "../tracing-serde" }
tracing-appender = { path = "../tracing-appender" }
tracing-journald = { path = "../tracing-journald" }

# serde example
serde_json = "1.0.82"

futures = "0.3.21"
tokio = { version = "1.20.0", features = ["full"] }

# tower examples
tower = { version = "0.4.13", features = ["full"] }
http = "0.2.8"
hyper = { version = "0.14.20", features = ["full"] }
rand = "0.7.3"
bytes = "1.2.0"
argh = "0.1.8"

# sloggish example
nu-ansi-term = "0.46.0"
humantime = "2.1.0"
log = "0.4.17"

# inferno example
inferno = "0.11.6"
tempfile = "3.3.0"

# fmt examples
snafu = "0.6.10"
thiserror = "1.0.31"
