# Note: these examples _cannot_ currently be in the root workspace, as they will
# break the build on stable Rust. Once async_await is stable on all versions
# that tracing builds against, they can be added to the root workspace.
#
# DO NOT ADD THIS TO THE ROOT WORKSPACE.
[workspace]

[package]
name = "nightly-examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
tracing = "0.1"
tracing-fmt = "0.0.1-alpha.3"
tracing-futures = { path = "../tracing-futures", default-features = false, features = ["std-future"] }
tokio = { git = "https://github.com/tokio-rs/tokio.git" }
tracing-attributes = { path = "../tracing-attributes" }
