[package]
name = "tokio-trace-env-logger"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]

[dependencies]
tokio-trace-log = { path = "../tokio-trace-log" }
env_logger = "0.5"
log = "0.4"

[dev-dependencies]
tokio-trace = { path = "../tokio-trace" }
hyper = "0.12"
futures = "0.1"
ansi_term = "0.11"
humantime = "1.1.1"
