[package]
name = "tracing-env-logger"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]

[dependencies]
tracing-log = { path = "../tokio-trace-log" }
env_logger = "0.5"
log = "0.4"

[dev-dependencies]
tracing-fmt = { path = "../tokio-trace-fmt" }
tracing-futures = { path = "../tokio-trace-futures" }
tracing-subscriber = { path = "../tokio-trace-subscriber" }
hyper = "=0.12.25"
futures = "0.1"
tokio = "0.1.21"

[dev-dependencies.tracing]
# TODO: replace this with a path dependency on the local `tracing`.
package = "tokio-trace"
version = "0.1"
