[package]
name = "tokio-trace-fmt"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]

[features]
default = ["ansi"]
ansi = ["ansi_term"]

[dependencies]
tokio-trace-core = { git = "https://github.com/tokio-rs/tokio" }
ansi_term = { version = "0.11", optional = true }
owning_ref = "0.4.0"

[dev-dependencies]
tokio-trace = "0.0.1"
