[package]
name = "tokio-trace-fmt"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]

[features]
default = ["ansi"]
ansi = ["ansi_term"]

[dependencies]
tokio-trace-core = "0.1"
ansi_term = { version = "0.11", optional = true }
regex = "1"
lazy_static = "1"
owning_ref = "0.4.0"
parking_lot = { version = "0.7"}
lock_api = "0.1"

[dev-dependencies]
tokio-trace = "0.0.1"
