[package]
name = "tokio-trace-futures"
version = "0.0.1"
authors = ["Eliza Weisman <eliza@buoyant.io>"]

[features]
default = ["with-tokio"]
with-tokio = ["tokio"]

[dependencies]
futures = "0.1"
tokio-trace = "0.0.1"
tokio = { version = "0.1", optional = true }

[dev-dependencies]
tokio = "0.1"
tokio-trace-fmt = { path = "../tokio-trace-fmt" }
