[package]
name = "tracing-futures"
version = "0.0.1"
authors = ["Eliza Weisman <eliza@buoyant.io>"]

[features]
default = ["tokio"]

[dependencies]
futures = "0.1"
tokio = { version = "0.1", optional = true }
tokio-executor = { version = "0.1", optional = true }

[dependencies.tracing]
# TODO: replace this with a path dependency on the local `tracing`.
package = "tokio-trace"
version = "0.1"

[dev-dependencies]
tokio = "0.1.21"
tracing-fmt = { path = "../tokio-trace-fmt" }
