[package]
name = "tracing-macros"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]

[dependencies.tracing]
# TODO: replace this with a path dependency on the local `tracing`.
package = "tokio-trace"
version = "0.1"

[dev-dependencies]
tracing-log = { path = "../tokio-trace-log" }
env_logger = "0.5"
