[package]
name = "tracing-serde"
version = "0.1.0"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"

[dependencies]
serde = "1"

[dependencies.tracing-core]
# TODO: replace this with a path dependency on the local `tracing-core`.
package = "tokio-trace-core"
version = "0.2.0"

[dev-dependencies]
serde_json = "1.0"

[dev-dependencies.tracing]
# TODO: replace this with a path dependency on the local `tracing`.
package = "tokio-trace"
version = "0.1"
