[package]
name = "tokio-trace-tower-http"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]

[dependencies]
tokio-trace = "0.1.0"
tokio-trace-futures = { path = "../tokio-trace-futures" }
futures = "0.1"
tower-service = "0.2"
tower = { git = "https://github.com/tower-rs/tower.git" }
http = "0.1"

[dev-dependencies]
bytes = "0.4"
h2 = "=0.1.11"
tower-h2 = { git = "https://github.com/tower-rs/tower-h2.git" }
string = { git = "https://github.com/carllerche/string" }
tokio = "0.1"
tokio-current-thread = "0.1.1"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tokio-trace-subscriber = { path = "../tokio-trace-subscriber" }
tokio-trace-fmt = { path = "../tokio-trace-fmt" }
tokio-io = "0.1"
ansi_term = "0.11"
humantime = "1.1.1"
env_logger = "0.5"
