[package]
name = "tokio-trace-tower"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]

[dependencies]
tokio-trace = { path = "../tokio-trace" }
tokio-trace-futures = { path = "../tokio-trace-futures" }
futures = "0.1"
tower-service = { git = "https://github.com/tower-rs/tower.git", rev = "882fe7240bb1bd5e2de19f14ef1cb898cdd6a0e0" }
