[package]
name = "tracing-tower"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]

[dependencies]
tracing-futures = { path = "../tokio-trace-futures" }
futures = "0.1"
tower-service = "0.2"

[dependencies.tracing]
# TODO: replace this with a path dependency on the local `tracing`.
package = "tokio-trace"
version = "0.1"
