[package]
name = "tokio-trace"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]

[features]
default = []
test-support =  []

[dependencies]
futures = "0.1"

[dev-dependencies]
ansi_term = "0.11"
humantime = "1.1.1"
env_logger = "0.5"
tokio-trace-log = { path = "../tokio-trace-log" }
