[package]
name = "tokio-trace"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]

[dependencies]
tokio-trace-core = { path = "../tokio-trace-core" }

[dev-dependencies]
ansi_term = "0.11"
humantime = "1.1.1"
env_logger = "0.5"
log = "0.4"
tokio-trace-log = { path = "../tokio-trace-log" }
futures = "0.1"
