[package]
name = "tracing-attributes"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.0"
authors = [
    "Tokio Contributors <team@tokio.rs>",
    "Eliza Weisman <eliza@buoyant.io>",
    "David Barsky <dbarsky@amazon.com>",
]
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
description = """
Procedural macro attributes for automatically instrumenting functions.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["logging", "tracing", "macro", "instrument", "log"]
license = "MIT"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", default-features = false, features = ["full", "parsing", "printing", "visit", "visit-mut", "clone-impls", "extra-traits", "proc-macro"] }
quote = "1"

[dev-dependencies]
tracing = { path = "../tracing", version = "0.2" }
tokio-test = { version = "0.3.0" }
tracing-core = { path = "../tracing-core", version = "0.2"}
async-trait = "0.1.44"

[badges]
maintenance = { status = "experimental" }
