[package]
name = "tracing-attributes"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.0"
authors = [
    "Tokio Contributors <team@tokio.rs>",
    "Eliza Weisman <eliza@buoyant.io>",
    "David Barsky <dbarsky@amazon.com>",
]
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
description = """
Procedural macro attributes for automatically instrumenting functions.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["logging", "tracing", "macro", "instrument", "log"]
license = "MIT"
readme = "README.md"
edition = "2018"
rust-version = "1.63.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
syn = { version = "2.0", default-features = false, features = [
    "full",
    "parsing",
    "printing",
    "visit-mut",
    "clone-impls",
    "extra-traits",
    "proc-macro",
] }
quote = "1.0.20"

[dev-dependencies]
tracing = { path = "../tracing", version = "0.2" }
tracing-mock = { path = "../tracing-mock" }
tokio-test = "0.4.2"
tracing-subscriber = { path = "../tracing-subscriber", version = "0.3", features = [
    "env-filter",
] }
tracing-test = { path = "../tracing-test" }
async-trait = "0.1.67"
trybuild = "1.0.64"
rustversion = "1.0.9"

[badges]
maintenance = { status = "experimental" }
