[package]
name = "tracing-attributes"
# When releasing to crates.io:
# - Remove path dependencies
# - Update doc url in README.md.
# - Update CHANGELOG.md.
# - Create "tracing-attributes-0.1.x" git tag.
version = "0.1.31"
authors = [
    "Tokio Contributors <team@tokio.rs>",
    "Eliza Weisman <eliza@buoyant.io>",
    "David Barsky <dbarsky@amazon.com>",
]
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
description = """
Procedural macro attributes for automatically instrumenting functions.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["logging", "tracing", "macro", "instrument", "log"]
license = "MIT"
readme = "README.md"
edition = "2018"
rust-version = "1.65.0"

[lib]
proc-macro = true

[features]

# This feature flag is no longer necessary.
async-await = []

# Enable experimental support for valuable crate
valuable = ["tracing/valuable"]

[dependencies]
proc-macro2 = "1.0.60"
syn = { version = "2.0", default-features = false, features = [
    "full",
    "parsing",
    "printing",
    "visit-mut",
    "clone-impls",
    "extra-traits",
    "proc-macro",
] }
quote = "1.0.20"

[dev-dependencies]
tracing = { path = "../tracing", version = "0.1.42" }
tracing-mock = { path = "../tracing-mock" }
tokio-test = "0.4.2"
tracing-subscriber = { path = "../tracing-subscriber", version = "0.3.0", features = [
    "env-filter",
] }
tracing-test = { path = "../tracing-test" }
async-trait = "0.1.67"
trybuild = "1.0.64"
rustversion = "1.0.9"

[badges]
maintenance = { status = "experimental" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs", "--cfg", "tracing_unstable"]
# it's necessary to _also_ pass `--cfg tracing_unstable` to rustc, or else
# dependencies will not be enabled, and the docs build will fail.
rustc-args = ["--cfg", "tracing_unstable"]
