[package]
name = "tracing-env-logger"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]

[dependencies]
tracing-log = { path = "../tracing-log" }
env_logger = "0.5"
log = "0.4"

[dev-dependencies]
tracing = "0.1"
tracing-fmt = { path = "../tracing-fmt" }
tracing-futures = { path = "../tracing-futures" }
tracing-subscriber = { path = "../tracing-subscriber" }
hyper = "=0.12.25"
futures = "0.1"
tokio = "0.1.22"
