[package]
name = "tracing-env-logger"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tracing-env-logger/0.1.0/tracing_env_logger"
description = """
A tracing subscriber that logs trace events using the `env_logger` crate
"""
categories = [
    "development-tools::debugging",
    "asynchronous",
]
keywords = ["logging", "tracing"]
license = "MIT"

[dependencies]
tracing-log = { path = "../tracing-log" }
env_logger = "0.5"
log = "0.4"

[dev-dependencies]
tracing = "0.1"
tracing-fmt = { path = "../tracing-fmt" }
tracing-futures = { path = "../tracing-futures" }
tracing-subscriber = { path = "../tracing-subscriber" }
hyper = "0.12.25"
futures = "0.1"
tokio = "0.1.22"

[badges]
azure-devops = { project = "tracing/tracing", pipeline = "tokio-rs.tracing", build = "1" }
maintenance = { status = "experimental" }
