[package]
name = "tracing-error"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.2.0-alpha.5", default-features = false, features = ["registry", "fmt"] }
tracing = "0.1"
