[package]
name = "tracing-flame"
version = "0.1.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tracing-subscriber = { version = "0.2.3", path = "../tracing-subscriber", default-features = false, features = ["registry", "fmt", "env-filter", "smallvec"] }
# tracing = { path = "../tracing", version = "0.12"}
tracing-subscriber = { path = "../tracing-subscriber", version = "0.2.3", default-features = false, features = ["registry", "fmt", "smallvec"] }
tracing = { path = "../tracing", version = "0.1.12"}
thiserror = "1.0.11"
displaydoc = "0.1.5"
