[package]
name = "tracing-flame"
version = "0.1.0"
authors = [
    "Jane Lusby <jlusby@yaah.dev>",
    "Tokio Contributors <team@tokio.rs>"
]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
description = """
Tracing layer for creating flamegraphs from span timings
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["tracing", "subscriber", "flamegraph", "profiling"]

[features]
default = ["smallvec"]
smallvec = ["tracing-subscriber/smallvec"]

[dependencies]
tracing-subscriber = { path = "../tracing-subscriber", version = "0.2.3", default-features = false, features = ["registry", "fmt"] }
tracing = { path = "../tracing", version = "0.1.12"}
lazy_static = "1.3.0"

[dev-dependencies]
tempdir = "0.3.7"
