[package]
name = "tracing-fmt"
version = "0.0.1-alpha.1"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/tracing-fmt/0.0.1-alpha.1/tracing-fmt"
description = """
An experimental subscriber for tracing, a runtime diagnostics system.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["logging", "tracing"]

[badges] 
maintenance = { status = "experimental" }

[features]
default = ["ansi", "chrono"]
ansi = ["ansi_term"]

[dependencies]
tracing-core = "0.1.2"
ansi_term = { version = "0.11", optional = true }
regex = "1"
lazy_static = "1"
owning_ref = "0.4.0"
parking_lot = { version = "0.7"}
lock_api = "0.1"
chrono = { version = "0.4", optional = true }

[dev-dependencies]
tracing = { version = "0.1" }
