[package]
name = "tracing-fmt"
version = "0.0.1-alpha.3"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tracing-fmt/0.0.1-alpha.3/tracing_fmt"
description = """
A (currently experimental) `tracing` subscriber that formats and logs trace data
"""
categories = [
    "development-tools::debugging",
    "asynchronous",
]
keywords = ["logging", "tracing"]
readme = "README.md"

[badges]
azure-devops = { project = "tracing/tracing", pipeline = "tokio-rs.tracing", build = "1" }
maintenance = { status = "experimental" }

[features]
default = ["ansi", "chrono", "tracing-log"]
ansi = ["ansi_term"]

[dependencies]
tracing-core = "0.1.2"
tracing-log = { version = "0.0.1-alpha.1", optional = true }
ansi_term = { version = "0.11", optional = true }
regex = "1"
lazy_static = "1"
owning_ref = "0.4.0"
parking_lot = { version = ">= 0.7, < 0.10", features = ["owning_ref"] }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
tracing = { version = "0.1" }
