[package]
name = "tracing-fmt"
version = "0.1.1"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tracing-fmt/0.1.1/tracing_fmt"
description = """
A `tracing` subscriber that formats and logs trace data. Moved to the `tracing-subscriber` crate.
"""
categories = [
    "development-tools::debugging",
    "asynchronous",
]
keywords = ["logging", "tracing"]
readme = "README.md"

[badges]
azure-devops = { project = "tracing/tracing", pipeline = "tokio-rs.tracing", build = "1" }
maintenance = { status = "deprecated" }

[features]
default = ["ansi", "chrono", "tracing-log"]

ansi = ["tracing-subscriber/ansi"]
chrono = ["tracing-subscriber/chrono"]
tracing-log = ["tracing-subscriber/tracing-log"]

[dependencies.tracing-subscriber]
version = "0.1"
features = ["fmt", "filter"]

[dev-dependencies]
tracing = { version = "0.1" }
